objects/amc__Action__c.object
<CustomObject>
    <fields>
        <fullName>amc__Material_Costs_Completed_Cost__c</fullName>
        <inlineHelpText>Rollup Sum of the Material Cost (Cost) field on all related Time Log records</inlineHelpText>
        <label>Material Costs Completed (Cost)</label>
        <summarizedField>amc__Time_Log__c.amc__Material_Cost_Cost__c</summarizedField>
        <summaryForeignKey>amc__Time_Log__c.amc__Action__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Material_Costs_Remaining_Cost__c</fullName>
        <formula>IF( amc__Material_Costs_Scheduled_Cost__c  &gt;  amc__Material_Costs_Completed_Cost__c ,  amc__Material_Costs_Scheduled_Cost__c  -  amc__Material_Costs_Completed_Cost__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates Material Costs Scheduled (Cost) - Material Costs Completed (Cost)</inlineHelpText>
        <label>Material Costs Remaining (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Material_Costs_Remaining__c</fullName>
        <formula>IF(amc__Material_Costs_Scheduled__c &gt; amc__Expense_Summary__c, amc__Material_Costs_Scheduled__c - amc__Expense_Summary__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material Costs Remaining (Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Material_Costs_Scheduled_Cost__c</fullName>
        <inlineHelpText>Identifies the cost value of any Scheduled Material Costs related to the Action</inlineHelpText>
        <label>Material Costs Scheduled (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Material_Costs_Scheduled__c</fullName>
        <inlineHelpText>Use this field to plan for any material costs related to the Action</inlineHelpText>
        <label>Material Costs Scheduled (Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Milestone_Is_Recurring__c</fullName>
        <formula>amc__Milestone__r.amc__Is_Recurring__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies if the parent Milestone is recurring</inlineHelpText>
        <label>Milestone Is Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Milestone__c</fullName>
        <label>Milestone</label>
        <referenceTo>amc__Milestone__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>amc__Non_Billable_Indicator__c</fullName>
        <formula>IF(amc__Non_Billable__c = TRUE, TRUE, amc__Milestone__r.amc__Non_Billable_Indicator__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if this Action is classified as Non Billable. If the Action &apos;Non Billable&apos; Field is set to TRUE, it takes this value, otherwise it takes the value from the Milestone &apos;Non Billable&apos; Field.</inlineHelpText>
        <label>Non Billable Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Non_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Action is Non Billable</inlineHelpText>
        <label>Non Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amc__Notify__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to send an immediate notification to the Action Owner</inlineHelpText>
        <label>Notify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Number_of_Recurrences__c</fullName>
        <inlineHelpText>Identifies the number of times this Action should be recurred</inlineHelpText>
        <label>Number of Recurrences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Old_SFDC_Action_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old SFDC Action ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Old_SFDC_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old SFDC ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__P_L_Actual__c</fullName>
        <formula>IF(
 OR(
  ISPICKVAL(amc__Milestone__r.amc__Project__r.amc__Billing_Type__c, &quot;Fixed Price&quot;), 
  ISPICKVAL(amc__Milestone__r.amc__Project__r.amc__Billing_Type__c, &apos;Fixed Price + Expenses&apos;)
 ),
 (amc__Hours_Scheduled_Cost__c + amc__Material_Costs_Scheduled__c) - (amc__Hours_Completed_Value_Cost__c +  amc__Material_Costs_Completed_Cost__c), 
 (amc__Hours_Completed_Cost__c +  amc__Expense_Summary__c ) - (amc__Hours_Completed_Value_Cost__c + amc__Material_Costs_Completed_Cost__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the P&amp;L for the Action based on the Actual figures. If Fixed Price used Scheduled Billable Value otherwise use Completed Billable Value and minus Hours Completed Value Cost</inlineHelpText>
        <label>P&amp;L (Actual)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__P_L_Forecast__c</fullName>
        <formula>IF(OR
 (ISPICKVAL( amc__Milestone__r.amc__Project__r.amc__Billing_Type__c , &quot;Fixed Price&quot;),
 ISPICKVAL( amc__Milestone__r.amc__Project__r.amc__Billing_Type__c , &quot;Fixed Price + Expenses&quot;)
 ), 
 (amc__Hours_Scheduled_Cost__c + amc__Material_Costs_Scheduled__c) - ( amc__Hours_Completed_Value_Cost__c + amc__Hours_Remaining_Value_Cost__c +  amc__Material_Costs_Completed_Cost__c  +  amc__Material_Costs_Remaining_Cost__c ) 
, 
( amc__Hours_Completed_Cost__c + amc__Hours_Remaining_Cost__c + amc__Expense_Summary__c + amc__Material_Costs_Remaining__c) - ( amc__Hours_Completed_Value_Cost__c + amc__Hours_Remaining_Value_Cost__c  +  amc__Material_Costs_Completed_Cost__c  +  amc__Material_Costs_Remaining_Cost__c ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the P&amp;L for the Action based on the Forecast figures (Completed + Remaining). If Fixed Price use Scheduled Billable Value otherwise use Completed Billable Value + Remaining Billable Value and minus Completed &amp; Remaining Costs</inlineHelpText>
        <label>P&amp;L (Forecast)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__P_L_Scheduled__c</fullName>
        <formula>(amc__Hours_Scheduled_Cost__c + amc__Material_Costs_Scheduled__c) - (amc__Hours_Scheduled_Value_Cost__c +  amc__Material_Costs_Scheduled_Cost__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the P&amp;L for the Action based on the Scheduled figures</inlineHelpText>
        <label>P&amp;L (Scheduled)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Pain_Points__c</fullName>
        <description>Detailed notes on the current pain point that is driving this Action</description>
        <inlineHelpText>Detailed notes on the current pain point that is driving this Action</inlineHelpText>
        <label>Pain Points</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Parent_End_Date__c</fullName>
        <description>Used in trigger to avoid queries.</description>
        <formula>amc__Dependant_Action__r.amc__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Prevent_Time_Logs_Indicator__c</fullName>
        <formula>If(amc__Milestone__r.amc__Prevent_Time_Logs_Indicator__c = TRUE, TRUE, amc__Prevent_Time_Logs__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Identifies if Time Logs should be prevented from being created for this Action. Will be TRUE if either the Action or parent Milestone field is set to TRUE</inlineHelpText>
        <label>Prevent Time Logs Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Prevent_Time_Logs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if Time Logs should be prevented from being created for this Action</inlineHelpText>
        <label>Prevent Time Logs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Priority__c</fullName>
        <description>Identifies the priority of this Action. High Priority Actions are flagged on the Gantt Chart</description>
        <inlineHelpText>Identifies the priority of this Action. High Priority Actions are flagged on the Gantt Chart</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Project_Id__c</fullName>
        <formula>CASESAFEID(amc__Milestone__r.amc__Project__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used by triggers to prevent unnecessary queries.</inlineHelpText>
        <label>Project Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Project_Name__c</fullName>
        <formula>HYPERLINK( &quot;/&quot; &amp; amc__Milestone__r.amc__Project__c ,  amc__Milestone__r.amc__Project__r.Name, &quot;_Self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Populated automatically via trigger.</inlineHelpText>
        <label>Project</label>
        <referenceTo>amc__Project__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Projected_Hours_Remaining_Billable__c</fullName>
        <formula>IF(AND(amc__Hours_Completed__c &gt; 0, amc__Completion_Percent__c &gt; 0), (amc__Hours_Completed__c / amc__Completion_Percent__c)-amc__Hours_Completed__c , amc__Hours_Remaining__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the projected number of billable hours remaining on this action</inlineHelpText>
        <label>Projected Hours Remaining - Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Projected_Hours_Remaining_Non_Billable__c</fullName>
        <formula>IF(AND(amc__Hours_Completed_Non_Billable__c &gt; 0, amc__Completion_Percent__c &gt; 0), (amc__Hours_Completed_Non_Billable__c / amc__Completion_Percent__c)- amc__Hours_Completed_Non_Billable__c, amc__Hours_Remaining_Non_Billable__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the projected number of non billable hours remaining on this action</inlineHelpText>
        <label>Projected Hours Remaining - Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Projected_P_L__c</fullName>
        <formula>IF(OR(
 ISPICKVAL(amc__Milestone__r.amc__Project__r.amc__Billing_Type__c, &quot;Fixed Price&quot;),
 ISPICKVAL(amc__Milestone__r.amc__Project__r.amc__Billing_Type__c, &quot;Fixed Price + Expenses&quot;)
 ), 
 (amc__Hours_Scheduled_Cost__c + amc__Material_Costs_Scheduled__c) - (amc__Projected_Value_Cost__c + amc__Material_Costs_Completed_Cost__c +  amc__Material_Costs_Remaining_Cost__c),
 ( amc__Projected_Value_Billable__c + amc__Expense_Summary__c +  amc__Material_Costs_Remaining__c) - (amc__Projected_Value_Cost__c + amc__Material_Costs_Completed_Cost__c + amc__Material_Costs_Remaining_Cost__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the Projected Profit &amp; Loss position for this Action. If Billing Type = Fixed Price, Hours Scheduled Value (Billable) - Projected Value (Cost), otherwise Projected Value (Billable) - Projected Value (Cost)</inlineHelpText>
        <label>Projected P&amp;L</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Projected_Total_Hours_Billable__c</fullName>
        <formula>amc__Hours_Completed__c + amc__Projected_Hours_Remaining_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the total projected billable hours for this Action. Hours Completed – Billable + Projected Hours Remaining – Billable</inlineHelpText>
        <label>Projected Total Hours – Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Projected_Total_Hours_Non_Billable__c</fullName>
        <formula>amc__Hours_Completed_Non_Billable__c + amc__Projected_Hours_Remaining_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the total projected non billable hours for this Action. Hours Completed – Non Billable + Projected Hours Remaining – Non Billable</inlineHelpText>
        <label>Projected Total Hours – Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Projected_Total_Hours__c</fullName>
        <formula>amc__Projected_Total_Hours_Billable__c + amc__Projected_Total_Hours_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the total projected hours for this Action. Sums Projected Total Hours – Billable + Projected Total Hours – Non Billable</inlineHelpText>
        <label>Projected Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Projected_Value_Billable__c</fullName>
        <formula>IF(ISPICKVAL(amc__Milestone__r.amc__Project__r.amc__Billing_Type__c, &quot;Fixed Price&quot;), amc__Hours_Scheduled_Cost__c, IF(OR(ISBLANK(amc__Completion_Percent__c),amc__Completion_Percent__c =0), amc__Hours_Remaining_Cost__c, amc__Hours_Completed_Cost__c / amc__Completion_Percent__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the projected billable value for this action. If Billing Type = Fixed Price, Hours Scheduled Value (Billable), otherwise if Completion % is blank or zero, Hours Remaining Value (Billable), Hours Completed Value (Billable) / Completion %</inlineHelpText>
        <label>Projected Value (Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Projected_Value_Cost__c</fullName>
        <formula>IF(ISBLANK(amc__Completion_Percent__c), amc__Hours_Remaining_Value_Cost__c, ((amc__Projected_Hours_Remaining_Billable__c + amc__Projected_Hours_Remaining_Non_Billable__c) * amc__Cost_Hourly_Rate__c) + amc__Hours_Completed_Value_Cost__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the projected cost value for this action. If Completion % is blank, Hours Remaining Value (Cost), otherwise ((Projected hours Remaining Billable + Projected Hours Remaining Non Billable) * Cost Hourly Rate) + Hours Completed Value (Cost)</inlineHelpText>
        <label>Projected Value (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Receive_New_Action_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Mission Control - system level only</description>
        <label>Receive New Action Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Recognised_Revenue__c</fullName>
        <formula>IF(ISPICKVAL(amc__Milestone__r.amc__Project__r.amc__Billing_Type__c, &quot;Fixed Price&quot;), amc__Completion_Percent__c * amc__Hours_Scheduled_Cost__c, amc__Hours_Completed_Cost__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the recognised revenue based on Completion % or Hours Completed (Billable). If Billing Type = Fixed Price, Completion % * Hours Scheduled Value (Billable), otherwise Hours Completed Value (Billable)</inlineHelpText>
        <label>Recognised Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Recommendations__c</fullName>
        <description>Detailed notes on the recommended solution</description>
        <inlineHelpText>Detailed notes on the recommended solution</inlineHelpText>
        <label>Recommendations</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Recurring_Frequency__c</fullName>
        <inlineHelpText>Identifies the frequency of the recurring schedule for this Action</inlineHelpText>
        <label>Recurring Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>amc__Frequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Requirement</description>
        <label>Requirement</label>
        <referenceTo>amc__Requirement__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Scheduled_Hours_Breakdown__c</fullName>
        <inlineHelpText>Stores the JSON of the breakdown of scheduled hours for the Action Owner and Contributors for this Action</inlineHelpText>
        <label>Scheduled Hours Breakdown</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amc__Skill_Name__c</fullName>
        <description>Name of the related skill record, used to save on queries in apex triggers.</description>
        <formula>amc__Skill__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Skill Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to the Skill record for the Skill the Role will be using when delivering this Action</description>
        <inlineHelpText>Links to the Skill record for the Skill the Role will be using when delivering this Action</inlineHelpText>
        <label>Skill</label>
        <referenceTo>amc__Skill__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__So_that_I_can__c</fullName>
        <inlineHelpText>A description of what the Persona is trying to achieve</inlineHelpText>
        <label>So that I can</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Start_Hour__c</fullName>
        <description>Required when creating an event.</description>
        <label>Start Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Start_Minute__c</fullName>
        <description>Required when creating an event</description>
        <label>Start Minute</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                    <default>true</default>
                    <label>00</label>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <isActive>false</isActive>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>Planning</fullName>
                    <isActive>false</isActive>
                    <label>Planning</label>
                </value>
                <value>
                    <fullName>Plannned</fullName>
                    <isActive>false</isActive>
                    <label>Plannned</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__System_End__c</fullName>
        <description>Stores the end date as set by the user before trigger code runs.  Used for calculating recurring actions.</description>
        <label>System End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__System_Start__c</fullName>
        <description>Stores the start date as set by the user before trigger code runs.  Used for calculating recurring actions.</description>
        <label>System Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Task__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick this box to create a standard Task based on this Action (Note: Can only be used where the Action Owner&apos;s  Project Role record is linked to a User)</inlineHelpText>
        <label>Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Total_Checklist_Items__c</fullName>
        <label>Total Checklist Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Total_Hours_Allocated__c</fullName>
        <formula>amc__Hours_Allocated_Billable__c + amc__Hours_Allocated_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates Hours Allocated - Billable + Hours Allocated - Non Billable</inlineHelpText>
        <label>Total Hours Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Total_Hours_Completed__c</fullName>
        <formula>amc__Hours_Completed__c + amc__Hours_Completed_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Field: Sum of the total hours completed, billable and non billable</inlineHelpText>
        <label>Total Hours Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Total_Hours_Remaining__c</fullName>
        <formula>amc__Hours_Remaining__c + amc__Hours_Remaining_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Field: Sum of the total hours remaining, billable and non billable</inlineHelpText>
        <label>Total Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Total_Hours_Scheduled__c</fullName>
        <formula>amc__Hours_Scheduled__c + amc__Hours_Scheduled_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Field: Sum of the total hours scheduled, billable and non billable</inlineHelpText>
        <label>Total Hours Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Total_Projected_Hours_Remaining__c</fullName>
        <formula>amc__Projected_Hours_Remaining_Billable__c + amc__Projected_Hours_Remaining_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Projected Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Total_User_Story_Efforts__c</fullName>
        <description>Sum of total Effort of all related User stories</description>
        <label>Total User Story Efforts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the User Story record that this Action was created from</inlineHelpText>
        <label>User Story</label>
        <referenceTo>amc__User_Story__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Whiteboard_Priority_Order__c</fullName>
        <description>Identifies the vertical position of the Action on the Whiteboard</description>
        <label>Whiteboard Priority Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Working_Days__c</fullName>
        <inlineHelpText>Tracks the number of automatically calculated working days for this Action.</inlineHelpText>
        <label>Working Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Action</label>
    <listViews>
        <fullName>amc__All</fullName>
        <columns>NAME</columns>
        <columns>amc__Action_Name__c</columns>
        <columns>amc__Non_Billable__c</columns>
        <columns>amc__End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>amc__Non_Billable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PAN:{0000}</displayFormat>
        <label>Action ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>amc__Billable_Hours_Cannot_Be_Entered</fullName>
        <active>false</active>
        <description>If the non-billable indicator on the action is True, then the Hours Scheduled - Billable cannot be greater than Zero.</description>
        <errorConditionFormula>amc__Non_Billable_Indicator__c = TRUE
 &amp;&amp; amc__Hours_Scheduled__c &gt; 0</errorConditionFormula>
        <errorDisplayField>amc__Hours_Scheduled__c</errorDisplayField>
        <errorMessage>You cannot enter billable hours for this action as the non-billable indicator is set to True.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__End_Date_Exceeds_Milestone_Deadline</fullName>
        <active>false</active>
        <description>Ensure the Action&apos;s End Date does not exceed the Milestone&apos;s Milestone Deadline</description>
        <errorConditionFormula>amc__End_Date__c &gt;  amc__Milestone__r.amc__Milestone_Deadline__c</errorConditionFormula>
        <errorMessage>The Action&apos;s End Date must not exceed the Milestone Deadline</errorMessage>
    </validationRules>
</CustomObject>